--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Vue Time Tracker</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://raw.githubusercontent.com/yuche/vue-strap/master/dist/vue-strap.min.js">
   </head>
   <body>
     <div id="app">
