--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8">
     <title>Vue Time Tracker</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://raw.githubusercontent.com/yuche/vue-strap/master/dist/vue-strap.min.js">
+
+    <script href="https://raw.githubusercontent.com/yuche/vue-strap/master/dist/vue-strap.min.js"> </script>
   </head>
   <body>
     <div id="app">
